<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="typFBDInOut" Id="{180ca1ec-aa0d-41c1-b14e-9f111a63bac0}">
    <Declaration><![CDATA[TYPE typFBDInOut :
	STRUCT
		xTrig		: BOOL;
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>